package com.company;

public class Magicien {
}
