package com.projet_warriors.armes;

public class Epee extends Arme {


    public Epee() {
        super.nom = "epee";
        super.forceAttaque = 5 ;
    }


}
