package com.projet_warriors.ennemis;

public class Dragon extends Ennemis{

    public Dragon() {
        super.nom = "dragon";
        super.viePoints=15;
        super.forcaAttaque=4;
    }
}
