package com.projet_warriors.exception;

public class PersonnageHorsPlateauException extends Exception {

    public PersonnageHorsPlateauException() {

        super();
    }

    public PersonnageHorsPlateauException(String message) {
        super(message);
    }
}
