package com.projet_warriors.potions;

public class PotionGrande extends Potion{

    public PotionGrande() {
        super.nom ="grande potion de vie";
        super.viePoints =5;
    }
}
