@startuml

title __PROJET_WARRIORS's Class Diagram__\n

  namespace com.projet_warriors {
    interface com.projet_warriors.Case {
    }
  }
  

  namespace com.projet_warriors {
    class com.projet_warriors.CaseVide {
    }
  }
  

  namespace com.projet_warriors {
    class com.projet_warriors.Main {
    }
  }
  

  namespace com.projet_warriors {
    class com.projet_warriors.Menu {
    }
  }
  

  namespace com.projet_warriors {
    class com.projet_warriors.PlateauJeu {
    }
  }
  

  namespace com.projet_warriors {
    class com.projet_warriors.PlayGame {
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Arme {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.BouleDeFeu {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Eclair {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Epee {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Massue {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace armes {
      class com.projet_warriors.armes.Sort {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace ennemis {
      class com.projet_warriors.ennemis.Dragon {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace ennemis {
      abstract class com.projet_warriors.ennemis.Ennemis {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace ennemis {
      class com.projet_warriors.ennemis.Gobelin {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace ennemis {
      class com.projet_warriors.ennemis.Sorcier {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace exception {
      class com.projet_warriors.exception.PersonnageHorsPlateauException {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace personnages {
      class com.projet_warriors.personnages.Guerrier {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace personnages {
      class com.projet_warriors.personnages.Magicien {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace personnages {
      abstract class com.projet_warriors.personnages.Personnage {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace potions {
      class com.projet_warriors.potions.Potion {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace potions {
      class com.projet_warriors.potions.PotionGrande {
      }
    }
  }
  

  namespace com.projet_warriors {
    namespace potions {
      class com.projet_warriors.potions.PotionStandard {
      }
    }
  }
  

  com.projet_warriors.CaseVide .up.|> com.projet_warriors.Case
  com.projet_warriors.PlayGame o-- com.projet_warriors.personnages.Personnage : playerHero
  com.projet_warriors.armes.Arme .up.|> com.projet_warriors.Case
  com.projet_warriors.armes.BouleDeFeu -up-|> com.projet_warriors.armes.Sort
  com.projet_warriors.armes.Eclair -up-|> com.projet_warriors.armes.Sort
  com.projet_warriors.armes.Epee -up-|> com.projet_warriors.armes.Arme
  com.projet_warriors.armes.Massue -up-|> com.projet_warriors.armes.Arme
  com.projet_warriors.armes.Sort .up.|> com.projet_warriors.Case
  com.projet_warriors.ennemis.Dragon -up-|> com.projet_warriors.ennemis.Ennemis
  com.projet_warriors.ennemis.Ennemis .up.|> com.projet_warriors.Case
  com.projet_warriors.ennemis.Gobelin -up-|> com.projet_warriors.ennemis.Ennemis
  com.projet_warriors.ennemis.Sorcier -up-|> com.projet_warriors.ennemis.Ennemis
  com.projet_warriors.personnages.Guerrier -up-|> com.projet_warriors.personnages.Personnage
  com.projet_warriors.personnages.Guerrier o-- com.projet_warriors.armes.Arme : arme
  com.projet_warriors.personnages.Magicien -up-|> com.projet_warriors.personnages.Personnage
  com.projet_warriors.personnages.Magicien o-- com.projet_warriors.armes.Sort : sort
  com.projet_warriors.potions.Potion .up.|> com.projet_warriors.Case
  com.projet_warriors.potions.PotionGrande -up-|> com.projet_warriors.potions.Potion
  com.projet_warriors.potions.PotionStandard -up-|> com.projet_warriors.potions.Potion


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
